<resources>
    <string name="app_name">IMC</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="weight_fragment_page_label">Weight Fragment</string>

    <string name="btn_init">Começar Agora</string>
    <string name="btn_continue">Continuar</string>
    <string name="btn_calculate">Calcular</string>
    <string name="btn_finish">Finalizar</string>

    <string name="subtitle"> Índice de Massa Corpórea é um método para calcular o peso ideal de cada pessoa</string>
    <string name="height_info">Informe a sua altura</string>
    <string name="weight_info">Informe o seu peso</string>
    <string name="unit_metter">cm</string>
    <string name="unit_weight">kg</string>

    <string name="info_result">Não se baseie apenas neste resultado, faça consultas e exames regularmente.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>